fix ul bottom spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,9 +39,8 @@ p {
 hr {
 	border: none;
 	border-top: 2px solid #cdcdcd;
-	;
-	margin-top: 20px;
-	margin-bottom: 10px;
+	margin-top: 1em;
+	margin-bottom: 1em;
 	width: 100%;
 }
 
@@ -115,6 +114,7 @@ p+p {
 
 ul {
 	margin-left: 2em;
+	margin-bottom: 1em;
 }
 
 ul#scenes {
